# photoeccentric

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  stellardensity.py
metallicity/: __init__.py  photoeccentric.py  spectroscopy.py  stellardensity.py
metallicity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: CDPP.ipynb  ECCSAMPLES.csv  ECCSAMPLES.py  MuirheadKICS.csv  Untitled.ipynb  dynestynew.ipynb  dynestynew_mcmctfit_dynestyphotofit.ipynb  get_density_all.ipynb  get_density_spectroscopy.ipynb  get_g_from_a_prior.ipynb  get_sigma_density_all.ipynb  get_sigma_density_spectroscopy.ipynb  jan29_21_iso_lums_10388286.csv  jan29_21_rhos_5868793.0.csv  keplerlc_all_lcs.ipynb  keplerlc_fitting.ipynb  keplerlc_fitting_dynesty.ipynb  keplerlc_fitting_emcee.ipynb  keplerlc_photoeccentric-Copy1.ipynb  keplerlc_photoeccentric.ipynb  lamost_comparison.ipynb  lamost_sample.ipynb  muirhead_comb.csv  muirhead_comb_lums.csv  muirhead_gaia.csv  muirhead_lamost.csv  muirhead_lamost_temps.csv  photoeccentric.ipynb  photoeccentric_lightcurvefitting.ipynb  photoeccentric_tutorial-eccpriortest.ipynb  photoeccentric_tutorial.ipynb  photoeccentric_tutorial_2.ipynb  photoeccentric_tutorial_BetaPriortest.ipynb  photoeccentric_tutorial_UnifPriortest.ipynb  rayleigh_dist_sensitivity_test.ipynb  sensitivity_test.ipynb  sensitivity_test_output.ipynb  sensitivity_test_output_Betaprior.ipynb  sensitivity_test_output_NEW.ipynb  sensitivity_test_output_Tdurations.ipynb  (+10 more)
photoeccentric/: __init__.py  classes_test.py  eccentricity.py  (+9 more)
(+4117 files in other folders)
