[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "photoeccentric"
authors = [{name = "Sheila Sagear", email = "ssagear@ufl.edu"}]
readme = "README.rst"
dependencies = ['numpy', 'astropy', 'h5py', 'matplotlib', 'tqdm', 'pandas', 'scipy']
license = {text = "MIT License"}
dynamic = ["version", "description"]
