[metadata]
name = photoeccentric
description = Fall 2020/Spring 2021
long_description = file: README.rst
author = Sheila Sagear
author_email = ssagear@ufl.edu
url = https://link-to-your-project
license = BSD 3-Clause License

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy
    matplotlib
    tqdm
    emcee
    corner
    batman
